links not showing in desktop view, fixed.

--- a/styles.css
+++ b/styles.css
@@ -177,7 +177,7 @@ nav {
     display: none;
   }
   .links-container {
-    height: auto;
+    height: auto !important;
   }
   .links {
     display: flex;
